--- a/blog-archive.html
+++ b/blog-archive.html
@@ -10,7 +10,7 @@ title:  "Blog Archive"
 <section id="archive">
   <h3>This year's posts</h3>
 
-  {%for post in site.posts %}
+  {%for post in site.posts | where:'layout', 'post' %}
     {% unless post.next %}
       <ul class="this">
     {% else %}
