--- a/blog-archive.html
+++ b/blog-archive.html
@@ -8,8 +8,7 @@ title:  "Blog Archive"
 </ul>
 
 <section id="archive">
-  <h3>This year's posts</h3>
-  {%for post in blogposts %}
+  {%for post in site.posts | where:'layout', 'post' %}
       <ul class="this">
       <li><time>{{ post.date | date:"%d %b %Y" }}</time>: <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
