--- a/blog-archive.html
+++ b/blog-archive.html
@@ -7,9 +7,10 @@ title:  "Blog Archive"
   <li>&#10146; <a href="/">Home</a></li>
 </ul>
 
+{% assign blogposts = site.posts | where:'layout', 'post' %}
 <section id="archive">
   <ul class="this">
-  {%for post in site.posts | where:'layout', 'post' %}
+  {%for post in blogposts %}
       <li><time>{{ post.date | date:"%d %b %Y" }}</time>: <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}
   </ul>
